--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h1>Welcome to my website</h1>
+    <h1 style "colour: blue"; >Welcome to my website</h1>
     <h2> Hello! </h2>
   </body>
 </html>
