Move style properties

--- a/hello.html
+++ b/hello.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello World</title>
+    <style>
+      h1 {
+        style "colour: blue";
+      }
+    </style>
   </head>
   <body>
-    <h1 style "colour: blue"; >Welcome to my website!!</h1>
-    <h2> Hello! </h2>
->>>>>>> ac37333c1ca734bf541f086fdd5e3b04f0d600fc
+    <h1>Welcome to my website!!</h1>
+    <h2>Hello!</h2>
   </body>
 </html>
