--- a/hello.html
+++ b/hello.html
@@ -7,8 +7,7 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h1 style "colour: blue"; >Welcome to my website!!</h1>
+    <h1 style "colour: blue"; >Welcome to my website!</h1>
     <h2> Hello! </h2>
->>>>>>> ac37333c1ca734bf541f086fdd5e3b04f0d600fc
   </body>
 </html>
